# ralert

./: .dockerignore  .example.dev.env  .example.prod.env  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
examples/http/: admin_only.http  auth.http  health.http  protected.http
migrations/: 20251031142416_create_services_table.sql
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/mappers/: user_mapper.rs
src/application/use_cases/: health_check_uc_impl.rs  mod.rs
src/application/use_cases/auth/: mod.rs  sign_in_uc_impl.rs
src/domain/: mod.rs
src/domain/datasources/: mod.rs  user_datasource.rs
src/domain/dtos/: health_status_dto.rs  mod.rs
src/domain/dtos/auth/: mod.rs  (+1 more)
src/domain/entities/: auth_user_entity.rs  health_status_entity.rs  mod.rs  user_entity.rs
src/domain/errors/: app_error.rs
src/domain/repositories/: user_repository.rs
src/domain/use_cases/: health_check_uc.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: environments.rs  mod.rs
src/infrastructure/database/: connection.rs
src/infrastructure/datasources/: mod.rs  user_datasource_impl.rs
src/infrastructure/di/: container.rs
src/infrastructure/errors/: error_handler.rs
src/infrastructure/middleware/: jwt_middleware.rs
src/infrastructure/repositories/: user_repository_impl.rs
src/infrastructure/services/: jwt_service.rs
src/infrastructure/web/: app_state.rs
src/presentation/: mod.rs
src/presentation/extractors/: auth_user_extractor.rs  mod.rs
src/presentation/web/: auth_handler.rs  health_handler.rs  user_handler.rs
(+9 files in other folders)
